--- a/spotify.css
+++ b/spotify.css
@@ -8,8 +8,10 @@
 }
 
 #nova{
-    color: white;
-    background-color: black;
+    color: black;
+    background-color:aquamarine;
+    border-style: solid;
+    border-color:black;
 }
 
 *{
@@ -21,5 +23,18 @@
     border-width: ;
     border-color: green;
     border-radius: 5px;
+    background-color: aliceblue;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+textarea{
+    background-color: aliceblue;
+    border-color: green;
+    border-style: solid;
+    border-left: 8px solid green;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+hr{
+   border-color:aquamarine;
+}
