--- a/spotify.css
+++ b/spotify.css
@@ -4,7 +4,7 @@
 }
 
 .cor{
-    color:black;
+    color:rgb(49, 166, 212);
 }
 
 #nova{
@@ -15,16 +15,18 @@
 }
 
 *{
-    background-color:lightblue; 
+    background-color:black; 
+    color: aliceblue;
 }
 
 .oi{
     border-style: solid;
     border-width: ;
-    border-color: green;
+    border-color: rgb(32, 226, 14);
     border-radius: 5px;
     background-color: aliceblue;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
 }
 
 textarea{
@@ -33,6 +35,7 @@ textarea{
     border-style: solid;
     border-left: 8px solid green;
     font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 hr{
